闭合QuickBuild交互链 / complete QuickBuild interaction chain
迁移 QuickBuild 控件、状态、图标、持久化和 UI 适配层，保留全部模式、连锁滑杆输入以及无阴影 tooltip。

Port QuickBuild controls, status, icons, persistence, and UI adapters while preserving all modes, chain-slider input, and shadowless tooltips.